<resources>
    <string name="app_name">TransBusCity</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">Name</string>
    <string name="cari_kota">Cari Kota</string>
    <string name="kamis_07_sep_2023">Kamis, 07 Sep 2023</string>
    <string name="asal_kota">Asal kota</string>
    <string name="tujuan_kota">Tujuan kota</string>
    <string name="_18_00">18:00</string>
    <string name="kota">Kota</string>
    <string name="executive_vip">Executive - VIP</string>
    <string name="report">Report</string>
    <string name="_69">69</string>
    <string name="_31_243_000">31.243.000</string>
    <string name="_0">0</string>
    <string name="penjualan_online">Penjualan online</string>
    <string name="total">Total</string>
    <string name="tiket">Tiket</string>
    <string name="komisi">Komisi</string>
    <string name="setoran">Setoran</string>
    <string name="malang_surabaya_jkt_executive">Malang/Surabaya - JKT / Executive</string>
    <string name="download">Download</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="logout">Logout</string>
    <string name="ganti_akun">Ganti Akun</string>
    <string name="bma_trans">BMA Trans</string>
    <string name="kembali">Kembali</string>
    <string name="bima_domba_sumbawa_mataram_balibanyu">Bima-Domba-Sumbawa-Mataram-BaliBanyu</string>
    <string name="bima_mrt_sby_jkt_executive">BIMA-MRT-SBY-JKT / Executive</string>
    <string name="paket">Paket</string>
    <string name="manifest">Manifest</string>
    <string name="pick_up">Pick Up</string>
    <string name="rp_300_000">Rp 300.000</string>
    <string name="total_bayar">Total Bayar:</string>
    <string name="go_show">Go Show</string>
    <string name="penumpang_adalah_pemesan">Penumpang adalah Pemesan</string>
    <string name="nama_pemesan">Nama Pemesan</string>
    <string name="cek_member">Cek Member</string>
    <string name="nomor_telepon_pemesan">Nomor Telepon Pemesan</string>
    <string name="pemesan">Pemesan</string>
    <string name="_50">50</string>
    <string name="rp_270_000">Rp 270.000</string>
    <string name="merak">Merak</string>
    <string name="bima">Bima</string>
    <string name="bima_">Bima -</string>
    <string name="kantor_tiara_mas_bima">Kantor Tiara Mas Bima</string>
    <string name="tujuan">Tujuan</string>
    <string name="harga">Harga</string>
    <string name="kursi">Kursi</string>
    <string name="drop_off">Drop Off</string>
    <string name="jumlah_paket">Jumlah Paket</string>
    <string name="pengirim">Pengirim</string>
    <string name="nama_pengirim">Nama Pengirim</string>
    <string name="alamat_pengirim">Alamat Pengirim</string>
    <string name="nomor_telepon_pengirim">Nomor Telepon Pengirim</string>
    <string name="penerima">Penerima</string>
    <string name="nama_penerima">Nama Penerima</string>
    <string name="nomor_telepon_penerima">Nomor Telepon Penerima</string>
    <string name="kursi_1">Kursi 1</string>
    <string name="nama_penumpang">Nama Penumpang</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="keterangan">Keterangan</string>
    <string name="barang">Barang</string>
    <string name="list_paket">List Paket</string>
    <string name="rute">Rute</string>
    <string name="semarang">Semarang</string>
    <string name="cetak_manifest">Cetak Manifest</string>
    <string name="deck_1">Deck 1</string>
    <string name="deck_2">Deck 2</string>
    <string name="deck_3">Deck 3</string>
    <string name="supir">Supir</string>
</resources>