<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/cornerRadiusSmall"
    android:background="@color/white"
    android:layout_marginBottom="@dimen/marginSmall">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingSmall"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_jam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_18_00"
            android:layout_centerVertical="true"
            android:textAppearance="@style/textAppearance.Body2.Bold"
            android:paddingHorizontal="@dimen/paddingSmall"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/txt_jam"
            android:layout_centerHorizontal="true"
            android:paddingHorizontal="@dimen/paddingNormal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_kotaasal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@style/textAppearance.Body3.Bold"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/type_tempatddk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/executive_vip"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/textAppearance.Caption3"/>


        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>