<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/marginSmall"
    app:cardCornerRadius="@dimen/cornerRadiusSmall">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/paddingSmall"
        android:paddingVertical="@dimen/paddingSmall"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_nokursi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kursi_1"
            android:textAppearance="@style/textAppearance.Body3.Bold"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/marginSmall">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nmpenumpang"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_height"
                android:hint="@string/nama_penumpang"
                android:inputType="text"
                android:padding="0dp"
                android:paddingStart="@dimen/paddingNormal"
                android:textAppearance="@style/textAppearance.Body3"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout.Rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_notlp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_height"
                android:hint="@string/nomor_telepon"
                android:inputType="number"
                android:padding="0dp"
                android:paddingStart="@dimen/paddingNormal"
                android:textAppearance="@style/textAppearance.Body3"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Perempuan"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Laki-Laki"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>